syntax = "proto3";

package axion.deployment;

import "common/common.proto";
import "deployment/deployment.proto"; // For Deployment, ServiceDeploymentStatus

// Deployment management
message GetDeploymentRequest {
  axion.common.RequestMetadata metadata = 1;
  string deployment_id = 2;
}

message ListDeploymentsRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
  axion.common.Pagination pagination = 3;
  axion.common.DeploymentStatus status_filter = 4; // Опционально: фильтр по статусу
}

message GetDeploymentStatusRequest {
  axion.common.RequestMetadata metadata = 1;
  string deployment_id = 2;
}

message DeploymentResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    Deployment deployment = 3;
  }
}

message ListDeploymentsResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    ListDeploymentsData data = 3;
  }
}

message ListDeploymentsData {
  repeated Deployment deployments = 1;
  axion.common.Pagination pagination = 2;
}

message DeploymentStatusResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    DeploymentStatusData data = 3;
  }
}

message DeploymentStatusData {
  axion.common.DeploymentStatus status = 1;
  repeated ServiceDeploymentStatus service_statuses = 2;
  axion.common.DeploymentStage current_stage = 3;
  int32 progress_percent = 4;
  string error_message = 5;
}
