syntax = "proto3";

package axion.deployment;

import "common/common.proto";
import "deployment/deployment.proto"; // For Deployment

// Rollback
message RollbackDeploymentRequest {
  axion.common.RequestMetadata metadata = 1;
  string deployment_id = 2;
  optional string target_deployment_id = 3; // Откат к конкретному деплою (если не указан - к предыдущему)
}

message RollbackDeploymentResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    Deployment deployment = 3;
  }
}
