syntax = "proto3";

package axion.graph;

import "common/common.proto";

// Service messages (project services)
message ListServicesRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
  axion.common.Pagination pagination = 3;
}

message GetServiceRequest {
  axion.common.RequestMetadata metadata = 1;
  string project_id = 2;
  string node_id = 3; // = node.id в графе
}

message ProjectService {
  string id = 1;
  string project_id = 2;
  string node_id = 3; // Критично: должен совпадать с node.id в графе
  string service_name = 4;
  string blueprint_id = 5;
  map<string, string> config = 6; // JSONB конфигурация
  axion.common.ServiceStatus status = 7;
  int32 code_version = 8;
  string generated_code_path = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}

message ServiceResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    ProjectService service = 3;
  }
}

message ListServicesResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    ListServicesData data = 3;
  }
}

message ListServicesData {
  repeated ProjectService services = 1;
  axion.common.Pagination pagination = 2;
}
