syntax = "proto3";

package axion.infrastructure;

import "common/common.proto";

// Agent messages
message InstallAgentRequest {
  axion.common.RequestMetadata metadata = 1;
  string server_id = 2;
}

message InstallAgentResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    AgentInstallationResult data = 3;
  }
}

message AgentInstallationResult {
  string agent_id = 1;
  axion.common.ServerStatus status = 2; // INSTALLING -> CONNECTED
  string installation_log = 3;
  int64 installed_at = 4;
}

message GetAgentStatusRequest {
  axion.common.RequestMetadata metadata = 1;
  string server_id = 2;
}

message AgentStatusResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    AgentStatus agent_status = 3;
  }
}

message AgentStatus {
  string agent_id = 1;
  string server_id = 2;
  bool connected = 3;
  int64 last_heartbeat = 4;
  AgentMetrics metrics = 5;
  repeated DeployedProjectInfo deployed_projects = 6;
}

message AgentMetrics {
  double cpu_usage = 1;
  int64 memory_usage = 2;
  int64 disk_usage = 3;
  int32 active_containers = 4;
}

message DeployedProjectInfo {
  string project_id = 1;
  string deployment_id = 2;
  repeated string service_names = 3;
  int32 total_containers = 4;
  int32 healthy_containers = 5;
}
